fix navbar z-index

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   background-color: var(--white);
+  z-index: 10;
 }
 
 nav.active {
